k8s/kube-deployment.yml
---
apiVersion: v1
kind: Service
metadata:
  name: kubeapi
  namespace: test
spec:
  selector:
    app: kube
    tier: backend
  ports:
  - protocol: TCP
    port: 80
    targetPort: http
  type: LoadBalancer
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kubeapi
  namespace: test
spec:
  selector:
    matchLabels:
      app: kube
      tier: backend
      track: stable
  replicas: 2
  template:
    metadata:
      labels:
        app: kube
        tier: backend
        track: stable
    spec:
      containers:
        - name: kubeapi
          image: powersvr:5000/kubeapi:latest
          ports:
            - name: http
              containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: kubeui
  namespace: test
spec:
  selector:
    app: kube
    tier: frontend
  ports:
  - name: http
    protocol: TCP
    port: 80
    targetPort: 80
  - name: https
    protocol: TCP
    port: 443
    targetPort: 80  
  type: LoadBalancer			
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kubeui
  namespace: test
spec:
  selector:
    matchLabels:
      app: kube
      tier: frontend
      track: stable
  replicas: 2
  template:
    metadata:
      labels:
        app: kube
        tier: frontend
        track: stable
    spec:
      containers:
      - name: kubeui
        image: powersvr:5000/kubeui:latest
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: kube-ui-ingress
  namespace: test
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /
    certmanager.k8s.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
  - hosts:
    - k8test.eberrysolutions.com
    secretName: k8test-eberrysolutions-ingress-cert
  rules:
  - host: k8test.eberrysolutions.com
    http:
      paths:
      - path: /
        backend:
          serviceName: kubeui
          servicePort: 80
